Fix a few important color contrast issues

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -446,7 +446,7 @@ p > code {
 }
 
 .footer__copyright a {    
-    color: var(--link-color-dark);
+    color: var(--link-color-light);
     text-decoration: none;
     font-family: var(--serif-font-light), Georgia, serif;
 }
@@ -882,6 +882,11 @@ p > code {
     font-size: 0.9rem;
 }
 
+.post__date--dark {
+    color: var(--txt-color-dark-3);
+    opacity: 0.8;
+}
+
 .post__title {
     margin: 0;
     margin-bottom: 10px;
@@ -996,18 +1001,27 @@ p > code {
 .project__type {
     float: right;
     margin-left: 20px;
-    color: var(--txt-color-light-5);
+    color: var(--txt-color-dark-3);
+    opacity: 0.6;
     font-family: var(--base-font-med), Helvetica, sans-serif;
     font-size: 1rem;
     text-transform: uppercase;
 }
 
 .project__type > a {
-    color: var(--txt-color-light-5);
+    color: var(--txt-color-dark-3);
 }
 
 .project__type > a:hover {
-    color: var(--txt-color-light-4);
+    color: var(--txt-color-light-5);
+}
+
+.project__type--light a {
+    color: var(--txt-color-light-3);
+}
+
+.project__type--light > a:hover {
+    color: var(--txt-color-light-5);
 }
 
 
